# PyFlameVision

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Project_Overview.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  MIGRATION.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md
docs/api/: CORE.md  DATASETS.md  FUNCTIONAL.md  IO.md  MODELS.md  NN.md  OPS.md  TRANSFORMS.md
docs/guides/: CSL_TEMPLATES.md  TESTING.md
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  imagenet_transforms.cpp
examples/python/: imagenet_transforms.py
include/pyflame_vision/: pyflame_vision.hpp  version.hpp
include/pyflame_vision/backend/: csl_generator.hpp
include/pyflame_vision/core/: exceptions.hpp  image_tensor.hpp  interpolation.hpp  security.hpp
include/pyflame_vision/models/: efficientnet.hpp  models.hpp  resnet.hpp
include/pyflame_vision/nn/: activation.hpp  batchnorm.hpp  container.hpp  conv.hpp  linear.hpp  module.hpp  nn.hpp  pooling.hpp
include/pyflame_vision/ops/: grid_sample.hpp  nms.hpp  ops.hpp  roi_align.hpp
include/pyflame_vision/transforms/: blur.hpp  color_jitter.hpp  compose.hpp  crop.hpp  flip.hpp  functional.hpp  normalize.hpp  random_transform.hpp  resize.hpp  rotation.hpp  transform_base.hpp
python/: CMakeLists.txt  bindings.cpp
python/pyflame_vision/: __init__.py  _version.py  _version.py.in
python/pyflame_vision/datasets/: __init__.py  collate.py  dataloader.py  dataset.py  image_folder.py  samplers.py  vision_dataset.py
python/pyflame_vision/io/: __init__.py  io.py
python/pyflame_vision/ops/: __init__.py  ops.py
python/pyflame_vision/transforms/: __init__.py  functional.py  transforms.py
src/: CMakeLists.txt
src/backend/csl_templates/: color_jitter.csl.template  crop.csl.template  gaussian_blur.csl.template  halo_exchange.csl.template  hflip.csl.template  normalize.csl.template  resize_bilinear.csl.template  rotate.csl.template  vflip.csl.template
src/backend/csl_templates/ops/: grid_sample.csl.template  nms.csl.template  roi_align.csl.template
src/models/: efficientnet.cpp  resnet.cpp
src/transforms/: compose.cpp  crop.cpp  normalize.cpp  resize.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_image_tensor.cpp  test_ops.cpp  test_phase3_transforms.cpp  test_transforms.cpp
tests/python/: conftest.py  test_datasets.py  test_functional.py  test_ops.py  test_phase3_transforms.py  test_transforms.py
